--- a/www/templates/placepick.html
+++ b/www/templates/placepick.html
@@ -39,6 +39,18 @@
       <p>Here is some more information about this product that is only revealed once clicked on.</p>
     </div>
   </div>
+   <div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large red">
+      <i class="large material-icons">search</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div>
+  
      <button class="button waves-effect waves-light btn" ng-click="getPlace()">..or maybe somewhere else?</button>
 	</ion-content>
 </ion-view>
