--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7813,6 +7813,22 @@ h1 {
   font-size: 1em !important;
   font-weight: 300; }
 
+.star-ratings-sprite {
+  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+  font-size: 0;
+  height: 21px;
+  line-height: 0;
+  overflow: hidden;
+  text-indent: -999em;
+  width: 110px;
+  margin: 0 auto; }
+  .star-ratings-sprite .rating {
+    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
+    background-position: 0 100%;
+    float: left;
+    height: 21px;
+    display: block; }
+
 .menu-content {
   box-shadow: -1px 0 1px rgba(0, 0, 0, 0.05), 1px 0 1px rgba(0, 0, 0, 0.05);
   -webkit-box-shadow: -1px 0 1px rgba(0, 0, 0, 0.05), 1px 0 1px rgba(0, 0, 0, 0.05);
